# db

./: connect_to_db.py  create_db.sql  create_tables.py  hw_db.db  pyproject.toml  queries_execute.py  query_number_1.sql  query_number_10.sql  query_number_12.sql  query_number_3.sql  query_number_4.sql  query_number_8.sql  query_number_9.sql  seeds.py
queries/: query_number_11.sql  query_number_2.sql  query_number_5.sql  query_number_6.sql  query_number_7.sql
